--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "windsurf-tool",
-  "version": "4.4.2",
+  "version": "6.4.1",
   "description": "Windsurf-Tool - 自动化管理 Windsurf 账号，支持批量注册、账号切换、到期提醒等功能",
   "main": "main.js",
   "scripts": {
     "start": "electron .",
-    "dev": "electron . --dev",
+    "dev": "electron-vite dev",
+    "build:vite": "electron-vite build",
     "build": "electron-builder",
     "build:all": "npm run build:mac && npm run build:win && npm run build:linux",
     "build:mac": "CSC_TIMESTAMP_SERVER= PATH=\"$HOME/bin:$PATH\" electron-builder --mac",
@@ -36,37 +37,213 @@
     "url": "https://github.com/crispvibe/Windsurf-Tool.git"
   },
   "dependencies": {
-    "axios": "^1.6.0",
-    "fs-extra": "^11.3.2",
+    "axios": "^0.27.2",
+    "chrome-launcher": "^1.1.2",
+    "dunder-proto": "^1.0.1",
     "imap": "^0.8.19",
-    "keytar": "^7.9.0",
-    "lucide": "^0.553.0",
+    "lucide": "^0.555.0",
     "mailparser": "^3.6.5",
-    "node-dpapi-prebuilt": "^1.0.0",
     "puppeteer": "^21.11.0",
     "puppeteer-real-browser": "^1.3.8",
     "sql.js": "^1.10.3",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
+    "asarmor": "^3.0.2",
     "cross-env": "^10.1.0",
     "electron": "^26.6.10",
     "electron-builder": "^24.13.3",
+    "electron-vite": "^4.0.1",
     "javascript-obfuscator": "^4.1.1",
     "node-abi": "^4.17.0",
+    "vite": "^7.2.4",
     "wine-darwin": "^1.9.17-1"
   },
   "build": {
     "appId": "com.crispvibe.windsurf.tool",
     "productName": "Windsurf-Tool",
     "copyright": "Copyright © 2024 crispvibe",
-    "asar": false,
+    "asar": true,
+    "asarUnpack": [
+      "node_modules/puppeteer/**/*",
+      "node_modules/puppeteer-core/**/*",
+      "node_modules/@puppeteer/browsers/**/*",
+      "node_modules/cosmiconfig/**/*",
+      "node_modules/env-paths/**/*",
+      "node_modules/import-fresh/**/*",
+      "node_modules/js-yaml/**/*",
+      "node_modules/parse-json/**/*",
+      "node_modules/error-ex/**/*",
+      "node_modules/is-arrayish/**/*",
+      "node_modules/parent-module/**/*",
+      "node_modules/resolve-from/**/*",
+      "node_modules/callsites/**/*",
+      "node_modules/argparse/**/*",
+      "node_modules/json-parse-even-better-errors/**/*",
+      "node_modules/lines-and-columns/**/*",
+      "node_modules/puppeteer-real-browser/**/*",
+      "node_modules/chrome-launcher/**/*",
+      "node_modules/@types/node/**/*",
+      "node_modules/ghost-cursor/**/*",
+      "node_modules/puppeteer-extra/**/*",
+      "node_modules/rebrowser-puppeteer-core/**/*",
+      "node_modules/tree-kill/**/*",
+      "node_modules/escape-string-regexp/**/*",
+      "node_modules/is-wsl/**/*",
+      "node_modules/lighthouse-logger/**/*",
+      "node_modules/marky/**/*",
+      "node_modules/debug/**/*",
+      "node_modules/ms/**/*",
+      "node_modules/proxy-from-env/**/*",
+      "node_modules/lru-cache/**/*",
+      "node_modules/socks/**/*",
+      "node_modules/ip-address/**/*",
+      "node_modules/smart-buffer/**/*",
+      "node_modules/extract-zip/**/*",
+      "node_modules/get-stream/**/*",
+      "node_modules/pump/**/*",
+      "node_modules/end-of-stream/**/*",
+      "node_modules/once/**/*",
+      "node_modules/wrappy/**/*",
+      "node_modules/yauzl/**/*",
+      "node_modules/fd-slicer/**/*",
+      "node_modules/buffer-crc32/**/*",
+      "node_modules/pend/**/*",
+      "node_modules/progress/**/*",
+      "node_modules/unbzip2-stream/**/*",
+      "node_modules/buffer/**/*",
+      "node_modules/through/**/*",
+      "node_modules/base64-js/**/*",
+      "node_modules/ieee754/**/*",
+      "node_modules/yargs/**/*",
+      "node_modules/cliui/**/*",
+      "node_modules/escalade/**/*",
+      "node_modules/get-caller-file/**/*",
+      "node_modules/require-directory/**/*",
+      "node_modules/string-width/**/*",
+      "node_modules/y18n/**/*",
+      "node_modules/yargs-parser/**/*",
+      "node_modules/strip-ansi/**/*",
+      "node_modules/wrap-ansi/**/*",
+      "node_modules/ansi-regex/**/*",
+      "node_modules/ansi-styles/**/*",
+      "node_modules/color-convert/**/*",
+      "node_modules/color-name/**/*",
+      "node_modules/emoji-regex/**/*",
+      "node_modules/is-fullwidth-code-point/**/*",
+      "node_modules/bezier-js/**/*",
+      "node_modules/@types/bezier-js/**/*",
+      "node_modules/deepmerge/**/*",
+      "node_modules/proxy-agent/**/*",
+      "node_modules/@tootallnate/**/*",
+      "node_modules/agent-base/**/*",
+      "node_modules/http-proxy-agent/**/*",
+      "node_modules/https-proxy-agent/**/*",
+      "node_modules/pac-proxy-agent/**/*",
+      "node_modules/socks-proxy-agent/**/*",
+      "node_modules/pac-resolver/**/*",
+      "node_modules/degenerator/**/*",
+      "node_modules/get-uri/**/*",
+      "node_modules/basic-ftp/**/*",
+      "node_modules/data-uri-to-buffer/**/*",
+      "node_modules/fs-extra/**/*",
+      "node_modules/graceful-fs/**/*",
+      "node_modules/jsonfile/**/*",
+      "node_modules/universalify/**/*",
+      "node_modules/tar-stream/**/*",
+      "node_modules/tar-fs/**/*",
+      "node_modules/mkdirp-classic/**/*",
+      "node_modules/b4a/**/*",
+      "node_modules/fast-fifo/**/*",
+      "node_modules/streamx/**/*",
+      "node_modules/text-decoder/**/*",
+      "node_modules/events-universal/**/*",
+      "node_modules/bare-events/**/*",
+      "node_modules/bare-fs/**/*",
+      "node_modules/bare-path/**/*",
+      "node_modules/socks/**/*",
+      "node_modules/sprintf-js/**/*",
+      "node_modules/is-docker/**/*",
+      "node_modules/typed-query-selector/**/*",
+      "node_modules/escodegen/**/*",
+      "node_modules/esprima/**/*",
+      "node_modules/estraverse/**/*",
+      "node_modules/esutils/**/*",
+      "node_modules/ast-types/**/*",
+      "node_modules/tslib/**/*",
+      "node_modules/netmask/**/*",
+      "node_modules/semver/**/*",
+      "node_modules/ws/**/*",
+      "node_modules/chromium-bidi/**/*",
+      "node_modules/devtools-protocol/**/*",
+      "node_modules/mitt/**/*",
+      "node_modules/urlpattern-polyfill/**/*",
+      "node_modules/zod/**/*",
+      "node_modules/source-map/**/*",
+      "node_modules/imap/**/*",
+      "node_modules/mailparser/**/*",
+      "node_modules/utf7/**/*",
+      "node_modules/readable-stream/**/*",
+      "node_modules/safer-buffer/**/*",
+      "node_modules/string_decoder/**/*",
+      "node_modules/util-deprecate/**/*",
+      "node_modules/inherits/**/*",
+      "node_modules/encoding-japanese/**/*",
+      "node_modules/he/**/*",
+      "node_modules/html-to-text/**/*",
+      "node_modules/@selderee/**/*",
+      "node_modules/selderee/**/*",
+      "node_modules/parseley/**/*",
+      "node_modules/leac/**/*",
+      "node_modules/peberminta/**/*",
+      "node_modules/htmlparser2/**/*",
+      "node_modules/dom-serializer/**/*",
+      "node_modules/domhandler/**/*",
+      "node_modules/domutils/**/*",
+      "node_modules/entities/**/*",
+      "node_modules/domelementtype/**/*",
+      "node_modules/iconv-lite/**/*",
+      "node_modules/libmime/**/*",
+      "node_modules/libbase64/**/*",
+      "node_modules/libqp/**/*",
+      "node_modules/linkify-it/**/*",
+      "node_modules/uc.micro/**/*",
+      "node_modules/nodemailer/**/*",
+      "node_modules/punycode.js/**/*",
+      "node_modules/tlds/**/*",
+      "node_modules/@zone-eu/**/*",
+      "node_modules/sql.js/**/*",
+      "node_modules/uuid/**/*",
+      "node_modules/axios/**/*",
+      "node_modules/follow-redirects/**/*",
+      "node_modules/form-data/**/*",
+      "node_modules/es-set-tostringtag/**/*",
+      "node_modules/hasown/**/*",
+      "node_modules/es-errors/**/*",
+      "node_modules/get-intrinsic/**/*",
+      "node_modules/has-tostringtag/**/*",
+      "node_modules/function-bind/**/*",
+      "node_modules/call-bind-apply-helpers/**/*",
+      "node_modules/es-define-property/**/*",
+      "node_modules/es-object-atoms/**/*",
+      "node_modules/get-proto/**/*",
+      "node_modules/dunder-proto/**/*",
+      "node_modules/gopd/**/*",
+      "node_modules/has-symbols/**/*",
+      "node_modules/math-intrinsics/**/*",
+      "node_modules/proxy-from-env/**/*",
+      "node_modules/combined-stream/**/*",
+      "node_modules/delayed-stream/**/*",
+      "node_modules/mime-types/**/*",
+      "node_modules/mime-db/**/*",
+      "node_modules/asynckit/**/*"
+    ],
     "compression": "normal",
     "afterPack": "./build-scripts/afterPack.js",
     "buildDependenciesFromSource": false,
     "nodeGypRebuild": false,
     "directories": {
-      "output": "dist",
+      "output": "release",
       "buildResources": "build"
     },
     "files": [
@@ -78,7 +255,179 @@
       "src/**/*",
       "bin/**/*",
       "pay/**/*",
-      "build-scripts/**/*",
+      "node_modules/lucide/**/*",
+      "node_modules/puppeteer/**/*",
+      "node_modules/puppeteer-core/**/*",
+      "node_modules/@puppeteer/browsers/**/*",
+      "node_modules/cosmiconfig/**/*",
+      "node_modules/env-paths/**/*",
+      "node_modules/import-fresh/**/*",
+      "node_modules/js-yaml/**/*",
+      "node_modules/parse-json/**/*",
+      "node_modules/error-ex/**/*",
+      "node_modules/is-arrayish/**/*",
+      "node_modules/parent-module/**/*",
+      "node_modules/resolve-from/**/*",
+      "node_modules/callsites/**/*",
+      "node_modules/argparse/**/*",
+      "node_modules/json-parse-even-better-errors/**/*",
+      "node_modules/lines-and-columns/**/*",
+      "node_modules/puppeteer-real-browser/**/*",
+      "node_modules/chrome-launcher/**/*",
+      "node_modules/@types/node/**/*",
+      "node_modules/ghost-cursor/**/*",
+      "node_modules/puppeteer-extra/**/*",
+      "node_modules/rebrowser-puppeteer-core/**/*",
+      "node_modules/tree-kill/**/*",
+      "node_modules/escape-string-regexp/**/*",
+      "node_modules/is-wsl/**/*",
+      "node_modules/lighthouse-logger/**/*",
+      "node_modules/marky/**/*",
+      "node_modules/debug/**/*",
+      "node_modules/ms/**/*",
+      "node_modules/proxy-from-env/**/*",
+      "node_modules/lru-cache/**/*",
+      "node_modules/socks/**/*",
+      "node_modules/ip-address/**/*",
+      "node_modules/smart-buffer/**/*",
+      "node_modules/extract-zip/**/*",
+      "node_modules/get-stream/**/*",
+      "node_modules/pump/**/*",
+      "node_modules/end-of-stream/**/*",
+      "node_modules/once/**/*",
+      "node_modules/wrappy/**/*",
+      "node_modules/yauzl/**/*",
+      "node_modules/fd-slicer/**/*",
+      "node_modules/buffer-crc32/**/*",
+      "node_modules/pend/**/*",
+      "node_modules/progress/**/*",
+      "node_modules/unbzip2-stream/**/*",
+      "node_modules/buffer/**/*",
+      "node_modules/through/**/*",
+      "node_modules/base64-js/**/*",
+      "node_modules/ieee754/**/*",
+      "node_modules/yargs/**/*",
+      "node_modules/cliui/**/*",
+      "node_modules/escalade/**/*",
+      "node_modules/get-caller-file/**/*",
+      "node_modules/require-directory/**/*",
+      "node_modules/string-width/**/*",
+      "node_modules/y18n/**/*",
+      "node_modules/yargs-parser/**/*",
+      "node_modules/strip-ansi/**/*",
+      "node_modules/wrap-ansi/**/*",
+      "node_modules/ansi-regex/**/*",
+      "node_modules/ansi-styles/**/*",
+      "node_modules/color-convert/**/*",
+      "node_modules/color-name/**/*",
+      "node_modules/emoji-regex/**/*",
+      "node_modules/is-fullwidth-code-point/**/*",
+      "node_modules/bezier-js/**/*",
+      "node_modules/@types/bezier-js/**/*",
+      "node_modules/deepmerge/**/*",
+      "node_modules/proxy-agent/**/*",
+      "node_modules/@tootallnate/**/*",
+      "node_modules/agent-base/**/*",
+      "node_modules/http-proxy-agent/**/*",
+      "node_modules/https-proxy-agent/**/*",
+      "node_modules/pac-proxy-agent/**/*",
+      "node_modules/socks-proxy-agent/**/*",
+      "node_modules/pac-resolver/**/*",
+      "node_modules/degenerator/**/*",
+      "node_modules/get-uri/**/*",
+      "node_modules/basic-ftp/**/*",
+      "node_modules/data-uri-to-buffer/**/*",
+      "node_modules/fs-extra/**/*",
+      "node_modules/graceful-fs/**/*",
+      "node_modules/jsonfile/**/*",
+      "node_modules/universalify/**/*",
+      "node_modules/tar-stream/**/*",
+      "node_modules/tar-fs/**/*",
+      "node_modules/mkdirp-classic/**/*",
+      "node_modules/b4a/**/*",
+      "node_modules/fast-fifo/**/*",
+      "node_modules/streamx/**/*",
+      "node_modules/text-decoder/**/*",
+      "node_modules/events-universal/**/*",
+      "node_modules/bare-events/**/*",
+      "node_modules/bare-fs/**/*",
+      "node_modules/bare-path/**/*",
+      "node_modules/socks/**/*",
+      "node_modules/sprintf-js/**/*",
+      "node_modules/is-docker/**/*",
+      "node_modules/typed-query-selector/**/*",
+      "node_modules/escodegen/**/*",
+      "node_modules/esprima/**/*",
+      "node_modules/estraverse/**/*",
+      "node_modules/esutils/**/*",
+      "node_modules/ast-types/**/*",
+      "node_modules/tslib/**/*",
+      "node_modules/netmask/**/*",
+      "node_modules/semver/**/*",
+      "node_modules/ws/**/*",
+      "node_modules/chromium-bidi/**/*",
+      "node_modules/devtools-protocol/**/*",
+      "node_modules/mitt/**/*",
+      "node_modules/urlpattern-polyfill/**/*",
+      "node_modules/zod/**/*",
+      "node_modules/source-map/**/*",
+      "node_modules/imap/**/*",
+      "node_modules/mailparser/**/*",
+      "node_modules/utf7/**/*",
+      "node_modules/readable-stream/**/*",
+      "node_modules/safer-buffer/**/*",
+      "node_modules/string_decoder/**/*",
+      "node_modules/util-deprecate/**/*",
+      "node_modules/inherits/**/*",
+      "node_modules/encoding-japanese/**/*",
+      "node_modules/he/**/*",
+      "node_modules/html-to-text/**/*",
+      "node_modules/@selderee/**/*",
+      "node_modules/selderee/**/*",
+      "node_modules/parseley/**/*",
+      "node_modules/leac/**/*",
+      "node_modules/peberminta/**/*",
+      "node_modules/htmlparser2/**/*",
+      "node_modules/dom-serializer/**/*",
+      "node_modules/domhandler/**/*",
+      "node_modules/domutils/**/*",
+      "node_modules/entities/**/*",
+      "node_modules/domelementtype/**/*",
+      "node_modules/iconv-lite/**/*",
+      "node_modules/libmime/**/*",
+      "node_modules/libbase64/**/*",
+      "node_modules/libqp/**/*",
+      "node_modules/linkify-it/**/*",
+      "node_modules/uc.micro/**/*",
+      "node_modules/nodemailer/**/*",
+      "node_modules/punycode.js/**/*",
+      "node_modules/tlds/**/*",
+      "node_modules/@zone-eu/**/*",
+      "node_modules/sql.js/**/*",
+      "node_modules/uuid/**/*",
+      "node_modules/axios/**/*",
+      "node_modules/follow-redirects/**/*",
+      "node_modules/form-data/**/*",
+      "node_modules/es-set-tostringtag/**/*",
+      "node_modules/hasown/**/*",
+      "node_modules/es-errors/**/*",
+      "node_modules/get-intrinsic/**/*",
+      "node_modules/has-tostringtag/**/*",
+      "node_modules/function-bind/**/*",
+      "node_modules/call-bind-apply-helpers/**/*",
+      "node_modules/es-define-property/**/*",
+      "node_modules/es-object-atoms/**/*",
+      "node_modules/get-proto/**/*",
+      "node_modules/dunder-proto/**/*",
+      "node_modules/gopd/**/*",
+      "node_modules/has-symbols/**/*",
+      "node_modules/math-intrinsics/**/*",
+      "node_modules/proxy-from-env/**/*",
+      "node_modules/combined-stream/**/*",
+      "node_modules/delayed-stream/**/*",
+      "node_modules/mime-types/**/*",
+      "node_modules/mime-db/**/*",
+      "node_modules/asynckit/**/*",
       "package.json",
       "!**/*.{iml,o,hprof,orig,pyc,pyo,rbc,swp,csproj,sln,xproj}",
       "!.editorconfig",
@@ -134,7 +483,11 @@
       "target": [
         {
           "target": "nsis",
-          "arch": ["x64", "arm64"]
+          "arch": [
+            "x64",
+            "ia32",
+            "arm64"
+          ]
         }
       ],
       "icon": "build/icon.ico",
@@ -142,7 +495,9 @@
       "requestedExecutionLevel": "asInvoker",
       "verifyUpdateCodeSignature": false,
       "publisherName": "Windsurf Tool",
-      "signingHashAlgorithms": ["sha256"]
+      "signingHashAlgorithms": [
+        "sha256"
+      ]
     },
     "nsis": {
       "oneClick": false,
@@ -150,7 +505,6 @@
       "allowToChangeInstallationDirectory": true,
       "perMachine": false,
       "deleteAppDataOnUninstall": false,
-      "removeAppDataOnUninstall": false,
       "createDesktopShortcut": true,
       "createStartMenuShortcut": true,
       "shortcutName": "Windsurf-Tool",
